Added GridMET Drought Continuous cloud function and cleaned up typo in other cloud functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-
-.ipynb_checkpoints/Export_EEPixel_Timeseries_ImageCollection-checkpoint.ipynb
-__pycache__/eeDatabase_collectionMethods.cpython-39.pyc
-__pycache__/eeDatabase_coreMethods.cpython-39.pyc
+*.DS_Store
+*.pyc
